# other_examples

./: C#  README.txt
C#/: main.cs
C#/02/: CSharpStudents.sln
C#/02/CSharpStudents/: Bachelor.cs  CSharpStudents.csproj  DiplomaSearch.cs  FacultySearch.cs  FirsNameSearch.cs  Form1.Designer.cs  Form1.cs  Form1.resx  Iterator.cs  Master.cs  Program.cs  Read.cs  Search.cs  SecondNameSearch.cs  Student.cs  Students.cs  workWithStudents.Designer.cs  workWithStudents.cs
CICD/Android-Docker/: README.md
CPP/OOP/: theory.txt
CPP/OOP/CMaking/OOP_laba2/source_only/02_02/: CMakeLists.txt  employer_2.cpp  employer_2.h  engineer_2.cpp  engineer_2.h  item_2.cpp  item_2.h  main_2.cpp  person_2.cpp  person_2.h  worker_2.cpp  worker_2.h
CPP/OOP/win_visual_studio/: other-version.txt
CPP/study_examples/1/: 1.docx  a.cpp  b.cpp  c.cpp  тесты.txt
CPP/study_examples/2/: 2.docx  2a.cpp  2b.cpp  2c.cpp
CPP/study_examples/3/: 3.cpp  3.docx
CPP/study_examples/4/: 4.cpp
CPP/study_examples/5/: 5.cpp
CPP/study_examples/6/: 6 стар.cpp  6.cpp
CPP/study_examples/kr2/: 3.cpp
CPP/ООП/01/: empl.cpp  empl.h  main.cpp
CPP/ООП/02/: employer_1.cpp  employer_2.cpp  engineer_1.h  engineer_2.h  item_2.cpp  main_1.cpp  main_2.cpp  person_1.cpp  person_1.h  person_2.cpp  person_2.h  worker_1.cpp  (+1 more)
CPP/Параллельное программирование/: Л1.docx  Л2.docx  Л3.docx  Л4.docx
Delphi/: Unit1.dfm  Unit1.pas  acd_1.dpr  acd_1.res  lab1.pas  lab1.txt  lab2.pas  lab3.pas  lab3.txt  lab41.pas  lab42.pas  lab42.txt  lab5.pas  lab5.txt
OLAP/: Введение.docx  Заключение.docx  Содержание.docx
(+147 files in other folders)
